# rust-ordered-float

./: Cargo.toml
src/: lib.rs  not_nan.rs  ordered_float.rs
tests/: test.rs
