[package]

name = "ordered-float"
version = "0.1.0"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
license = "MIT"
description = "Wrappers for total ordering on floats."
repository = "https://github.com/reem/rust-ordered-float"

[dependencies]
num = "0.1"
unreachable = "0.0"

[dev-dependencies]
stainless = "*"
