[package]

name = "ordered-float"
version = "0.1.0"
authors = ["Jonathan Reem <jonathan.reem@gmail.com>"]
license = "MIT"
description = "Wrappers for total ordering on floats."
repository = "https://github.com/reem/rust-ordered-float"

[dependencies]
num = "0.1"
unreachable = "0.0"

[dependencies.serde]
version = "0.4"
optional = true

[dependencies.rustc-serialize]
version = "0.3"
optional = true

[dev-dependencies]
stainless = "*"
